--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@
 }
 
 :root{
-    --primary-color: #FFBA00;
+    --primary-color: #ff4800;
     --secundary-color: #FFF1CC;
-    --shadow-color: #CCC;
+    --shadow-color: #0c0b0b;
     --text-color: #FFF;
 }
 
